make readjustments